--- a/serviceinventory/src/main/resources/application.properties
+++ b/serviceinventory/src/main/resources/application.properties
@@ -2,6 +2,19 @@
 ###       APPLICATION PARAMETERS         ###
 ############################################
 
+# Database connection (mandatory)
+# Change the server timezone if neccessary
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/arrowhead?serverTimezone=Europe/Budapest  
+spring.datasource.username=serviceinventory
+spring.datasource.password=qA0YwzRTjX2YhrX
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+# use true only for debugging
+spring.jpa.show-sql=false  
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=none
+
 # Service Inventory web-server parameters
 server.address=0.0.0.0
 server.port=8469
@@ -32,9 +45,9 @@ sr_port=8443
 server.ssl.enabled=true
 
 server.ssl.key-store-type=PKCS12
-server.ssl.key-store=classpath:certificates/eventhandler.p12
+server.ssl.key-store=classpath:certificates/serviceinventory.p12
 server.ssl.key-store-password=123456
-server.ssl.key-alias=eventhandler
+server.ssl.key-alias=serviceinventory
 server.ssl.key-password=123456
 server.ssl.client-auth=need
 server.ssl.trust-store-type=PKCS12
