skeleton services and other related stuff

--- a/serviceinventory/src/main/resources/application.properties
+++ b/serviceinventory/src/main/resources/application.properties
@@ -35,6 +35,19 @@ log_all_request_and_response=false
 sr_address=127.0.0.1
 sr_port=8443
 
+# How frequently should check for deletable results (in minutes)
+clean_interval=10
+
+# The number of workers that processing incoming requests
+label_worker_num=1
+
+# The folder in which the processing scripts are found
+script_folder=/tmp/arrowhead/serviceinventory/scripts
+
+
+# Working folder for the scripts
+working_folder=/tmp/arrowhead/serviceinventory/working
+
 ############################################
 ###           SECURE MODE                ###
 ############################################
