--- a/serviceinventory/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/serviceinventory/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -33,5 +33,25 @@
     "name": "domain.port",
     "type": "java.lang.Integer",
     "description": "A description for 'domain.port'"
-  }  
+  },
+  {
+    "name": "clean_interval",
+    "type": "java.lang.Integer",
+    "description": "A description for 'clean_interval'"
+  },
+  {
+    "name": "label_worker_num",
+    "type": "java.lang.Integer",
+    "description": "A description for 'label_worker_num'"
+  },
+  {
+    "name": "script_folder",
+    "type": "java.lang.String",
+    "description": "A description for 'script_folder'"
+  },
+  {
+    "name": "working_folder",
+    "type": "java.lang.String",
+    "description": "A description for 'working_folder'"
+  }
 ]}
